src/css/desktop.css
header,
main {
  width: 100%;
  max-width: 1440px;
  box-sizing: border-box;
}

.container {
  width: 100%;
}

.nav {
  width: 100%;
  height: 60px;
  padding: 6px 32px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.nav .nav__logo {
  display: flex;
  gap: 8px;
  align-items: center;
}
.nav .nav__logo .nav__logo-text {
  font-family: Roboto;
  font-weight: 400;
  font-size: 24px;
  line-height: 100%;
  letter-spacing: 0%;
  text-align: center;
  vertical-align: middle;
}

.nav .nav__menu-list {
  display: flex;
  gap: 32px;
  align-items: center;
  justify-content: center;
}

.nav .nav__menu .nav__menu-link {
  font-family: Roboto;
  font-weight: 500;
  font-size: 14px;
  line-height: 100%;
  letter-spacing: 0%;
  text-align: center;
  vertical-align: middle;
  text-transform: uppercase;
}
.nav .nav__menu .nav__menu-link:hover {
  color: orange;
}

.nav .nav__menu .nav__menu-link:where(.active) {
  color: orange;
}

.hero {
  position: relative;
  width: 100%;
  height: 720px;
  box-sizing: border-box;
  border: 2px solid #fada;
}

.hero .hero__content-background {
  position: absolute;
  top: 0;

  width: 100%;
  height: 100%;
  z-index: -1;
}

.hero .hero__content {
  margin: 118px 135px;
  background: linear-gradient(
    83.06deg,
    #111111 11.91%,
    rgba(17, 17, 17, 0) 73.11%
  );
}

.hero .hero__content .hero__content-stars {
  display: flex;
  gap: 5px;
}

